<resources>
    <string name="app_name">HSM</string>
    <string name="login_label">Đăng nhập</string>
    <string name="identity_hint">Username</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="back_to_main">Quay lại</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="forgot_password_hint">Nhập email của bạn</string>
    <string name="btn_forgot_password">Gửi</string>
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="old_password_eng">Old password</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="username">Pkdminh</string>
    <string name="roomName">President Suite</string>
    <string name="edit_account">Account Modify</string>
    <string name="delete">Delete</string>
    <string name="add_account">Add new account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="email">Email</string>
    <string name="room_text">Phòng</string>
    <string name="room_type_text">Loại</string>
    <string name="capacity_text">Sức chứa</string>
    <string name="night">/Tối</string>
    <string name="status_text">Trạng thái</string>
    <string name="btn_create">Create</string>
    <string name="btn_update">Update</string>
    <string name="head_service">Service</string>
    <string name="select_category">Select Category</string>
    <string-array name="dropdown_items">
        <item>Active</item>
        <item>DeActive</item>
    </string-array>
    <string name="field_date_of_birth">Date of birth: </string>
    <string name="field_gender">Gender: </string>
    <string name="field_address">Address: </string>
    <string name="field_phone_number">Phone Number: </string>
    <string name="field_start_work_date">Start working from: </string>
    <string name="dashboard">Dashboard</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="service">Service</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="room">Room</string>

    <string name="service_desc">Pool service available</string>
    <string name="service_name">Pool</string>
    <string name="price">Price</string>
</resources>
