<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.auth.activity.LoginActivity"
    android:id="@+id/main">
    <!-- Top background image -->
    <ImageView
        android:id="@+id/img_login_background"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="fitCenter"
        android:src="@drawable/hotel_logo"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="45dp"
        android:text="@string/login_label"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/login_title"
        android:padding="32dp"
        android:background="@drawable/form_background"
        android:elevation="8dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edt_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identity_hint"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"/>

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_outline_24"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="20sp"
        style="@style/save_button"
        android:layout_margin="10dp"
        android:layout_below="@id/form_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>



