<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">
    <!-- Top background image -->
    <ImageView
        android:id="@+id/img_change_pass_background"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="fitCenter"
        android:src="@drawable/hotel_logo"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/change_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="45dp"
        android:text="@string/change_password"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/form_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/change_pass_title"
        android:padding="32dp"
        android:background="@drawable/form_background"
        android:elevation="8dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_outline_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_background"/>

        <EditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_outline_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/edt_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_outline_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        style="@style/save_button"
        android:layout_margin="20dp"
        android:layout_below="@id/form_change_pass"
        android:layout_centerHorizontal="true" />
</RelativeLayout>



