<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="59dp"

        android:layout_marginEnd="10dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hote_room1" />


            <TextView
                android:id="@+id/room_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/room_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/room_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="101"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/room_number_text"
                app:layout_constraintTop_toTopOf="@+id/room_number_text" />


            <TextView
                android:id="@+id/room_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/room_type_text"
                app:layout_constraintStart_toStartOf="@+id/price_text"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <TextView
                android:id="@+id/room_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:drawableRight="@drawable/bed"
                android:text="DOUBLE BED"
                app:layout_constraintStart_toEndOf="@+id/room_type_text"
                app:layout_constraintTop_toTopOf="@+id/room_type_text" />

            <TextView
                android:id="@+id/capacity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/capacity_text"
                app:layout_constraintStart_toStartOf="@+id/room_type_text"
                app:layout_constraintTop_toBottomOf="@+id/room_type_text" />

            <TextView
                android:id="@+id/capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:drawableRight="@drawable/people"
                app:layout_constraintStart_toStartOf="@+id/room_type"
                app:layout_constraintTop_toTopOf="@+id/capacity_text" />


            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="đ"
                android:textColor="#2361BD"
                android:textColorLink="#2361BD"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/room_number_text"
                app:layout_constraintTop_toBottomOf="@+id/room_number_text" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200.000"
                android:textColor="#2361BD"
                android:textColorLink="#2361BD"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/price_text"
                app:layout_constraintTop_toTopOf="@+id/price_text" />

            <TextView
                android:id="@+id/price_per_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night"
                android:textColor="#2361BD"
                android:textColorLink="#2361BD"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@+id/price" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/status_text"
                app:layout_constraintStart_toStartOf="@+id/price_text"
                app:layout_constraintTop_toBottomOf="@+id/capacity_text" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VACANT"
                android:textColor="#4CAF50"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/capacity"
                app:layout_constraintTop_toTopOf="@+id/status_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
