<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ViewServiceActivity">

    <!-- Header -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/service_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/head_service"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:iconifiedByDefault="false"
        android:padding="8dp"
        android:queryHint="Search service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/service_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_service" />

    <LinearLayout
        android:id="@+id/action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_create" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/bottom_action"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingStart="16dp"-->
<!--        android:paddingEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:layout_editor_absoluteY="685dp">-->

<!--        <Button-->
<!--            android:id="@+id/btn_home"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="home" />-->

<!--        <Space-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_category"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="category" />-->

<!--        <Space-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_service"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="service" />-->

<!--        <Space-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_profile"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="profile" />-->
<!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>